# breezyshim

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  disperse.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yaml  publish.yaml  rust.yaml
src/: branch.rs  clean_tree.rs  commit.rs  config.rs  controldir.rs  cvs.rs  darcs.rs  delta.rs  diff.rs  dirty_tracker.rs  error.rs  export.rs  foreign.rs  forge.rs  fossil.rs  git.rs  github.rs  gitlab.rs  gpg.rs  graph.rs  groupcompress.rs  hooks.rs  interrepository.rs  intertree.rs  knit.rs  launchpad.rs  lib.rs  location.rs  lock.rs  mercurial.rs  merge.rs  osutils.rs  patches.rs  plugin.rs  prelude.rs  rename_map.rs  repository.rs  revisionid.rs  search.rs  status.rs  (+15 more)
src/bazaar/: mod.rs  tree.rs
src/debian/: apt.rs  debcommit.rs  directory.rs  error.rs  import_dsc.rs  merge_upstream.rs  mod.rs  release.rs  upstream.rs  vcs_up_to_date.rs
src/graph/: tests.rs
src/versionedfiles/: tests.rs
