[package]
name = "breezyshim"
version = "0.1.204"
edition = "2021"
license = "GPL-2.0+"
description = "Rust shim around the Breezy Python API"
homepage = "https://www.breezy-vcs.org/"
repository = "https://code.launchpad.net/breezyshim"
documentation = "https://docs.rs/breezyshim"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>",]
include = ["src/*.rs", "Cargo.toml", "COPYING.txt", "src/*/*.rs"]

[dependencies]
pyo3-filelike = ">=0.1"
tempfile = "3.6.0"
lazy_static = "1.4.0"
chrono = "0.4"
ctor = { version = "0.2.6", optional = true }
lazy-regex = ">=2"
patchkit = "0.1"
log = "0.4"
debian-control = { version = ">= 0.1.14", optional = true, features = ["python-debian"] }
dirty-tracker = { version = "0.3", optional = true }
debian-changelog = { version = "0.1.12", optional = true }
difflib = { version = "0.4.0", optional = true }
percent-encoding = "2.3.1"
sqlx = { version = ">=0.8", optional = true }

[features]
default = ["auto-initialize"]
debian = ["dep:debversion", "dep:debian-control", "dep:debian-changelog", "dep:difflib"]
dirty-tracker = ["dep:dirty-tracker"]
auto-initialize = ["dep:ctor"]
sqlx = ["sqlx/postgres"]

[dependencies.debversion]
version = ">=0.2"
optional = true
features = [ "python-debian",]

[dependencies.url]
version = "2"
features = [ "serde",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.pyo3]
workspace = true
features = [ "serde",]

[workspace.dependencies]
pyo3 = { version = ">=0.22", features = ["py-clone", "chrono"] }

[dev-dependencies]
maplit = "1"
serial_test = { version = ">=2", default-features = false }

[dev-dependencies.pyo3]
workspace = true
