[package]
name = "breezyshim"
version = "0.7.0"
edition = "2021"
rust-version = "1.86"
license = "GPL-2.0+"
description = "Rust shim around the Breezy Python API"
homepage = "https://www.breezy-vcs.org/"
repository = "https://github.com/breezy-team/breezyshim"
documentation = "https://docs.rs/breezyshim"
authors = [ "Martin Packman <gzlist@googlemail.com>", "Jelmer Vernooij <jelmer@jelmer.uk>",]
include = ["src/*.rs", "Cargo.toml", "COPYING.txt", "src/*/*.rs"]

[dependencies]
pyo3-filelike = ">=0.5.1,<0.6"
tempfile = "3.20.0"
lazy_static = "1.4.0"
chrono = "0.4"
ctor = { version = ">=0.2.0,<0.7", optional = true }
lazy-regex = ">=3.4,<4"
regex = ">=1.10,<2"
patchkit = ">=0.2.2,<0.3"
log = "0.4"
whoami = ">=1.5,<2"
debian-control = { version = ">=0.1.44,<0.3", optional = true, features = ["python-debian"] }
deb822-lossless = { version = "0.4.0", optional = true }
dirty-tracker = { version = "0.3", optional = true }
debian-changelog = { version = ">=0.2.3,<0.3", optional = true }
difflib = { version = "0.4.0", optional = true }
percent-encoding = "2.3.1"
sqlx = { version = ">=0.8,<0.9", optional = true }
launchpadlib = { version = ">=0.4.5,<0.5", optional = true }

[features]
default = ["auto-initialize"]
debian = ["dep:debversion", "dep:debian-control", "dep:debian-changelog", "dep:difflib", "dep:deb822-lossless"]
dirty-tracker = ["dep:dirty-tracker"]
auto-initialize = ["dep:ctor"]
sqlx = ["sqlx/postgres"]
launchpad = ["dep:launchpadlib"]

[dependencies.debversion]
version = ">=0.5.0,<0.6"
optional = true
features = [ "python-debian",]

[dependencies.url]
version = "2"
features = [ "serde",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.pyo3]
workspace = true
features = [ "serde",]

[workspace.dependencies]
pyo3 = { version = ">=0.27,<0.28", features = ["chrono"] }

[dev-dependencies]
maplit = "1"
serial_test = { version = ">=2,<4", default-features = false }

[dev-dependencies.pyo3]
workspace = true
